--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For Latiese 💕</title>
+<title>To La'Tiese 💕</title>
 
 <style>
     * {
@@ -107,9 +107,9 @@
 <div class="mist"></div>
 
 <div class="container">
-    <h1>For Latiese 💖</h1>
+    <h1>For La'Tiese 💖</h1>
     <p>You are loved more than words can explain.</p>
-    <button onclick="addHeart()">Send Love 💕</button>
+    <button onclick="addHeart()">Click to show Ji'Aire 💕</button>
     <div class="counter">Hearts sent: <span id="count">0</span> 💗</div>
 </div>
 
