--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     setInterval(() => {
         const heart = document.createElement("div");
         heart.classList.add("heart");
-        heart.innerHTML = "💗";
+        heart.innerHTML = "💜";
         heart.style.left = Math.random() * 100 + "vw";
         heart.style.animationDuration = (7 + Math.random() * 5) + "s";
         document.body.appendChild(heart);
