Update button text to show love to Ji'Aire

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <div class="container">
     <h1>For La'Tiese 💖</h1>
     <p>You are loved more than words can explain.</p>
-    <button onclick="addHeart()">Click to show Ji'Aire 💕</button>
+    <button onclick="addHeart()">Click to show love to Ji'Aire 💕</button>
     <div class="counter">Hearts sent: <span id="count">0</span> 💗</div>
 </div>
 
