Replace La'Tiese page with MoneyMotion verification page

--- a/index.html
+++ b/index.html
@@ -1,152 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>To La'Tiese 💕</title>
-
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'Poppins', sans-serif;
-    }
-
-    body {
-        height: 100vh;
-        overflow: hidden;
-        background: linear-gradient(120deg, #f8cdda, #fbc2eb);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .mist {
-        position: absolute;
-        width: 200%;
-        height: 200%;
-        background: radial-gradient(circle, rgba(255,192,203,0.4) 0%, transparent 60%);
-        animation: mistMove 20s linear infinite;
-    }
-
-    @keyframes mistMove {
-        0% { transform: translate(-20%, -20%); }
-        50% { transform: translate(0%, 0%); }
-        100% { transform: translate(-20%, -20%); }
-    }
-
-    .container {
-        position: relative;
-        background: rgba(255,255,255,0.25);
-        backdrop-filter: blur(15px);
-        padding: 40px;
-        border-radius: 25px;
-        text-align: center;
-        box-shadow: 0 0 40px rgba(255,105,180,0.4);
-        z-index: 2;
-    }
-
-    h1 {
-        color: #ff4f9a;
-        font-size: 2.5rem;
-        margin-bottom: 10px;
-    }
-
-    p {
-        color: #ff5fa2;
-        margin-bottom: 25px;
-        font-size: 1.1rem;
-    }
-
-    button {
-        background: linear-gradient(135deg, #ff5fa2, #ff85c1);
-        border: none;
-        padding: 15px 30px;
-        border-radius: 50px;
-        font-size: 1.1rem;
-        color: white;
-        cursor: pointer;
-        box-shadow: 0 0 20px rgba(255,105,180,0.6);
-        transition: transform 0.2s ease;
-    }
-
-    button:hover {
-        transform: scale(1.08);
-    }
-
-    .counter {
-        margin-top: 15px;
-        color: #ff4f9a;
-        font-size: 1.2rem;
-    }
-
-    .heart {
-        position: absolute;
-        color: rgba(255,105,180,0.7);
-        font-size: 20px;
-        animation: floatUp 8s linear infinite;
-    }
-
-    @keyframes floatUp {
-        0% {
-            transform: translateY(100vh) scale(0.8);
-            opacity: 0;
+    <meta charset="UTF-8">
+    <title>MoneyMotion Verification</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: #0f0f0f;
+            color: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-        20% { opacity: 1; }
-        100% {
-            transform: translateY(-10vh) scale(1.2);
-            opacity: 0;
+        .box {
+            text-align: center;
+            padding: 40px;
+            border-radius: 12px;
+            background: #161616;
+            box-shadow: 0 0 25px rgba(0,0,0,0.6);
+            max-width: 500px;
         }
-    }
-</style>
+        h1 {
+            margin-bottom: 10px;
+        }
+        p {
+            opacity: 0.85;
+        }
+        .verify {
+            margin-top: 20px;
+            padding: 12px;
+            background: #222;
+            border-radius: 8px;
+            font-size: 14px;
+            word-break: break-all;
+        }
+    </style>
 </head>
-
 <body>
 
-<div class="mist"></div>
+    <div class="box">
+        <h1>Site Active</h1>
+        <p>This domain is active and publicly accessible.</p>
 
-<div class="container">
-    <h1>For La'Tiese 💖</h1>
-    <p>You are loved more than words can explain.</p>
-    <button onclick="addHeart()">Click to show love to Ji'Aire 💕</button>
-    <div class="counter">Hearts sent: <span id="count">0</span> 💗</div>
-</div>
+        <!-- 🔽 PASTE THE MONEYMOTION PHRASE BELOW 🔽 -->
+        <div class="verify">
+            PASTE-YOUR-MONEYMOTION-VERIFICATION-PHRASE-HERE
+        </div>
+        <!-- 🔼 YOU CAN DELETE THIS AFTER VERIFICATION 🔼 -->
 
-<script>
-    let count = 0;
-
-    function addHeart() {
-        count++;
-        document.getElementById("count").innerText = count;
-
-        const heart = document.createElement("div");
-        heart.classList.add("heart");
-        heart.innerHTML = "💖";
-        heart.style.left = Math.random() * 100 + "vw";
-        heart.style.animationDuration = (6 + Math.random() * 4) + "s";
-
-        document.body.appendChild(heart);
-
-        setTimeout(() => {
-            heart.remove();
-        }, 10000);
-    }
-
-    // background floating hearts
-    setInterval(() => {
-        const heart = document.createElement("div");
-        heart.classList.add("heart");
-        heart.innerHTML = "💜";
-        heart.style.left = Math.random() * 100 + "vw";
-        heart.style.animationDuration = (7 + Math.random() * 5) + "s";
-        document.body.appendChild(heart);
-
-        setTimeout(() => {
-            heart.remove();
-        }, 12000);
-    }, 700);
-</script>
+    </div>
 
 </body>
 </html>
