Update MoneyMotion verification phrase

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!-- 🔽 PASTE THE MONEYMOTION PHRASE BELOW 🔽 -->
         <div class="verify">
-            PASTE-YOUR-MONEYMOTION-VERIFICATION-PHRASE-HERE
+            8YU-fQr-ppi-
         </div>
         <!-- 🔼 YOU CAN DELETE THIS AFTER VERIFICATION 🔼 -->
 
